src/objects/EmployeeBillRateOverride__c.object
<CustomObject>
    <fields>
        <fullName>BillRateUnit__c</fullName>
        <label>Bill Rate Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmpBillRateOverrideID__c</fullName>
        <externalId>true</externalId>
        <label>Employee BillRate Override ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Bill_Rate_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDateActive__c</fullName>
        <label>End Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Employee Bill Rate Overrides</relationshipLabel>
        <relationshipName>Employee_Bill_Rate_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Employee Bill Rate Overrides</relationshipLabel>
        <relationshipName>Employee_Bill_Rate_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RateCurrencyCode__c</fullName>
        <label>Rate Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateDiscReasonCode__c</fullName>
        <label>Rate Disc Reason Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordVersionNumber__c</fullName>
        <label>Record Version Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateActive__c</fullName>
        <label>Start Date Active</label>
        <type>Date</type>
    </fields>
    <label>Employee Bill Rate Override</label>
    <nameField>
        <label>Employee Bill Rate Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Bill Rate Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>